--- a/style/style.css
+++ b/style/style.css
@@ -50,6 +50,9 @@
 .makedrive-file-dialog .file-dialog-footer .open-button {
   background-color: #E0F0FA;
 }
+.makedrive-file-dialog .file-dialog-footer .open-button.disabled {
+  cursor: not-allowed;
+}
 .makedrive-file-dialog .dialog-button:focus {
   border: 1px solid #3F8EB5;
   box-shadow: none;
@@ -105,6 +108,9 @@
   cursor: pointer;
   right: 10px;
 }
+.makedrive-file-dialog .file-selector-box {
+  position: absolute;
+}
 .makedrive-file-dialog .file-name-container .floppy-icon,
 .makedrive-file-dialog .file-path .floppy-icon,
 .makedrive-file-dialog .file-name-container .back-button,
@@ -116,7 +122,7 @@
   position: relative;
   padding: 15px 0 40px;
   display: inline-block;
-  width: 90px;
+  width: 95px;
   max-height: 40px;
   text-align: center;
 }
